--- a/src/app/Pages/Stand/stand.component.scss
+++ b/src/app/Pages/Stand/stand.component.scss
@@ -1,3 +1,5 @@
+@import '../../../variables';
+
 .content-container {
   padding: 20px;
   height: 120%;
@@ -21,7 +23,7 @@
       display: flex;
       justify-content: center;
       background: #6BA368;
-      box-shadow: 1px 1px 15px gray;
+      box-shadow: $circularShadow;
       img {
         border: 3px solid #6BA368;
         max-width: 100%;
